--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "karma-chrome-launcher": "^0.2.1",
     "karma-jasmine": "^0.3.6",
     "karma-phantomjs-launcher": "^0.2.1",
+    "karma-tape-reporter": "^1.0.3",
     "phantomjs": "^1.9.18"
   }
 }
