--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.1",
     "karma-jasmine": "^0.3.6",
+    "karma-mocha-reporter": "^1.1.1",
     "karma-phantomjs-launcher": "^0.2.1",
     "karma-tape-reporter": "^1.0.3",
     "phantomjs": "^1.9.18"
