--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: node_js
 node_js:
   - "4.1"
-  
+
+env:
+  - DISPLAY=:99.0
 before_install:
+  - sh -e /etc/init.d/xvfb start
   - npm install selenium-webdriver
