--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,18 @@ language: node_js
 node_js:
   - "4.1"
 
+language: ruby
+rvm:
+  - "2.1"
+
 env:
   - DISPLAY=:99.0
 before_install:
+  - npm install jekyll
+  - jekyll serve
   - sh -e /etc/init.d/xvfb start
   - npm install selenium-webdriver
+  
+  
+install: gem install jekyll html-proofer
+script: jekyll build && htmlproof ./_site
