--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,6 @@ before_install:
   
   
 install: gem install jekyll html-proofer
-script: jekyll build && htmlproof ./_site
+script: 
+    jekyll build
+    htmlproof ./_site
