--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,10 @@ env:
 before_install:
   - sh -e /etc/init.d/xvfb start
   - npm install selenium-webdriver
+  - gem install jekyll
   - jekyll build
   
   
-install: gem install jekyll html-proofer
+install: gem install html-proofer
 script: 
   - htmlproof ./_site --verbose:true --check_html:true
