--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ before_install:
   
 install: gem install html-proofer
 script: 
-  - htmlproof ./_site --verbose:true --check_html:true
+  - htmlproof ./_site
