--- a/.travis.yml
+++ b/.travis.yml
@@ -18,4 +18,4 @@ before_install:
   
 install: gem install html-proofer
 script: 
-  - htmlproof ./_site --verbose true
+  - htmlproof ./_site --verbose true --file_ignore node_modules, tests
