--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ rvm:
 
 env:
   - DISPLAY=:99.0
+  global:
+    - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
   
 before_install:
   - sh -e /etc/init.d/xvfb start
@@ -18,4 +20,4 @@ before_install:
   
 install: gem install html-proofer
 script: 
-  - htmlproof ./_site --verbose true --file_ignore node_modules, tests
+  - htmlproof ./_site --verbose true --file_ignore node_modules,tests
