--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,13 @@ rvm:
   - "2.1"
 
 env:
-  - DISPLAY=:99.0
+#  - DISPLAY=:99.0
   global:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
   
 before_install:
-  - sh -e /etc/init.d/xvfb start
-  - npm install selenium-webdriver
+#  - sh -e /etc/init.d/xvfb start
+#  - npm install selenium-webdriver
   - gem install jekyll
   - jekyll build
   
