--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ before_install:
   
 install: gem install html-proofer
 script: 
-  - htmlproof ./_site --verbose true --file_ignore node_modules,tests
+  - htmlproof ./_site --verbose true --file_ignore node_modules
