added html proffer

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,22 @@
 language: node_js
 node_js:
   - "4.1"
+
+language: ruby
+rvm:
+  - "2.1"
+
+env:
+  global:
+  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+
+script:
+  - galen check galen-test/home.gspec --url http://localhost:4000/ --size 1024x768 --htmlreport galen-test/reports
+  - htmlproof ./_site --verbose --href-ignore "#" --disable-external --file-ignore './_site/node_modules/*'
+
+before_install:
+  - gem install jekyll
+  - gem install html-proofer
+  - npm install
+  - npm install -g galenframework-cli
+  - jekyll build
