--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "karma-jasmine": "^0.3.6",
     "karma-mocha-reporter": "^1.1.1",
     "karma-phantomjs-launcher": "^0.2.1",
-    "karma-tape-reporter": "^1.0.3",
+    "karma-tape-reporter": "^1.0.3"
   }
 }
