--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ script:
   - galen check galen-test/home.gspec --url http://localhost:4000/ --size 1024x768 --htmlreport galen-test/reports
   - htmlproof ./_site --verbose --href-ignore "#" --disable-external --file-ignore './_site/node_modules/*'
 
-install: true
+install: false
 
 before_install:
   - gem install jekyll
