--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
   - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
 
 script:
-  - galen check galen-test/home.gspec --url http://localhost:4000/ --size 1024x768 --htmlreport galen-test/reports
+#  - galen check galen-test/home.gspec --url http://localhost:4000/ --size 1024x768 --htmlreport galen-test/reports
   - htmlproof ./_site --verbose --href-ignore "#" --disable-external --file-ignore './_site/node_modules/*'
 
 install: false
@@ -19,5 +19,5 @@ install: false
 before_install:
   - gem install jekyll
   - gem install html-proofer
-  - npm install
   - npm install -g galenframework-cli
+  - npm install
