--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ notifications:
     email: false
 
 before_install:
+  - rvm install 2.1.5
   - gem install jekyll
   - gem install html-proofer
   - npm install -g galenframework-cli
