--- a/config
+++ b/config
@@ -27,7 +27,7 @@ galen.range.approximation=3
 # Default browser
 # ~~~~~~~~~~~~~~~~~~~~~~~~
 # A browser that should be used by default in case it was not specified in galen test
-galen.default.browser=firefox
+galen.default.browser=PhantomJS
 
 
 
@@ -40,7 +40,7 @@ spec.colorscheme.precision = 256
 # Full screenshots
 # ~~~~~~~~~~~~~~~~~~~~
 # In some browsers it is not possible to create a complete screenshot of whole page.
-# With this property enabled Galen will scroll page and make screenshots of parts of it. 
+# With this property enabled Galen will scroll page and make screenshots of parts of it. ігвщ
 # Then it will assemble it in a one big screenshot
 #
 galen.browser.screenshots.fullPage = false
