--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ env:
 before_install:
 #  - sh -e /etc/init.d/xvfb start
 #  - npm install selenium-webdriver
+  - npm install --save-dev frisby
+  - npm install jasmine-node
   - gem install jekyll
   - jekyll build
   
@@ -21,3 +23,4 @@ before_install:
 install: gem install html-proofer
 script: 
   - htmlproof ./_site --verbose --href-ignore "#" --disable-external --file-ignore './_site/node_modules/*'
+  - jasmine-node spec/ --junitreport --verbose
