--- a/config
+++ b/config
@@ -27,7 +27,7 @@ galen.range.approximation=3
 # Default browser
 # ~~~~~~~~~~~~~~~~~~~~~~~~
 # A browser that should be used by default in case it was not specified in galen test
-#galen.default.browser=PhantomJS
+galen.default.browser=phantomjs
 
 
 
