--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hello",
   "main": "_site/index.html",
   "scripts": {
-    "test": "clear && ./node_modules/karma/bin/karma start my.conf.js"
+    "test": ""
   },
   "repository": {
     "type": "git",
@@ -17,14 +17,13 @@
   },
   "homepage": "https://github.com/RaNKaR/rankar.github.io#readme",
   "devDependencies": {
-    "frisby": "^0.8.5",
     "jasmine-core": "^2.3.4",
+    "phantomjs": "^1.9.18",
     "karma": "^0.13.15",
     "karma-chrome-launcher": "^0.2.1",
     "karma-jasmine": "^0.3.6",
     "karma-mocha-reporter": "^1.1.1",
     "karma-phantomjs-launcher": "^0.2.1",
-    "karma-tape-reporter": "^1.0.3",
-    "phantomjs": "^1.9.18"
+    "karma-tape-reporter": "^1.0.3"
   }
 }
