--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,10 @@ script:
   - ./node_modules/karma/bin/karma start my.conf.js
   - htmlproof ./_site --verbose --href-ignore "#" --disable-external --file-ignore './_site/node_modules/*'
   - galen check galen-test/home.gspec --url http://rankar.github.io/ --size 1024x768 --htmlreport galen-test/reports -Dphantomjs.binary.path=/usr/local/phantomjs/bin/phantomjs
+  
+after_script:
+  - chmod +x $PWD/travis.sh
+  - $PWD/travis.sh
 
 cache:
   directories:
