--- a/.travis.yml
+++ b/.travis.yml
@@ -11,9 +11,11 @@ script:
   - htmlproof ./_site --verbose --href-ignore "#" --disable-external --file-ignore './_site/node_modules/*'
   - galen check galen-test/home.gspec --url http://rankar.github.io/ --size 1024x768 --htmlreport galen-test/reports -Dphantomjs.binary.path=/usr/local/phantomjs/bin/phantomjs
   
+  
+sudo: true
 after_script:
-  - chmod +x $PWD/travis.sh
-  - $PWD/travis.sh
+  - sudo chmod +x ./travis.sh
+  - ./travis.sh
 
 cache:
   directories:
