--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,14 @@ language: node_js
 node_js:
   - "4.1"
 
-env:
-  global:
-  - NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
+#env:
+  #global:
+  #- NOKOGIRI_USE_SYSTEM_LIBRARIES=true # speeds up installation of html-proofer
 
-script:
-  - ./node_modules/karma/bin/karma start my.conf.js
-  - htmlproof ./_site --verbose --href-ignore "#" --disable-external --file-ignore './_site/node_modules/*'
-  - galen check galen-test/home.gspec --url http://rankar.github.io/ --size 1024x768 --htmlreport galen-test/reports -Dphantomjs.binary.path=/usr/local/phantomjs/bin/phantomjs
+#script:
+  #- ./node_modules/karma/bin/karma start my.conf.js
+  #- htmlproof ./_site --verbose --href-ignore "#" --disable-external --file-ignore './_site/node_modules/*'
+  #- galen check galen-test/home.gspec --url http://rankar.github.io/ --size 1024x768 --htmlreport galen-test/reports -Dphantomjs.binary.path=/usr/local/phantomjs/bin/phantomjs
   
   
 sudo: true
@@ -25,8 +25,8 @@ cache:
 notifications:
     email: false
 
-before_install:
-  - rvm install 2.1.5
-  - gem install jekyll
-  - gem install html-proofer
-  - npm install -g galenframework-cli
+#before_install:
+  #- rvm install 2.1.5
+  #- gem install jekyll
+  #- gem install html-proofer
+  #- npm install -g galenframework-cli
