--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,13 @@ node_js:
   #- ./node_modules/karma/bin/karma start my.conf.js
   #- htmlproof ./_site --verbose --href-ignore "#" --disable-external --file-ignore './_site/node_modules/*'
   #- galen check galen-test/home.gspec --url http://rankar.github.io/ --size 1024x768 --htmlreport galen-test/reports -Dphantomjs.binary.path=/usr/local/phantomjs/bin/phantomjs
-  
+
+# whitelist
+branches:
+  only:
+    - master
+    - dev
+
   
 sudo: true
 
