--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ notifications:
   email: false
 
 before_install:
+  - sh -e /etc/init.d/xvfb start
+  - export DISPLAY=:99.0
   - rvm install 2.1.5
   - gem install jekyll
   - gem install html-proofer
