--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
 script:
   - ./node_modules/karma/bin/karma start my.conf.js
   - htmlproof ./_site --verbose --href-ignore "#" --disable-external --file-ignore './_site/node_modules/*'
-  - galen check galen-test/home.gspec --url http://rankar.github.io/ --size 1024x768 --htmlreport galen-test/reports -Dphantomjs.binary.path=/usr/local/phantomjs/bin/phantomjs
+  - galen check galen-test/home.gspec --url http://127.0.0.1/ --size 1024x768 --htmlreport galen-test/reports -Dphantomjs.binary.path=/usr/local/phantomjs/bin/phantomjs
 
 cache:
   directories:
