--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,13 @@ cache:
 notifications:
   email: false
 
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
+
 before_install:
-  - sh -e /etc/init.d/xvfb start
-  - export DISPLAY=:99.0
+  - "/sbin/start-stop-daemon --start --quiet --pidfile /tmp/custom_xvfb_99.pid --make-pidfile --background --exec /usr/bin/Xvfb -- :99 -ac -screen 0 1280x1024x16"
   - rvm install 2.1.5
   - gem install jekyll
   - gem install html-proofer
